# evergreen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/hdr/sky/: irradiance_diffuse_back.hdr  irradiance_diffuse_down.hdr  irradiance_diffuse_front.hdr  irradiance_diffuse_left.hdr  irradiance_diffuse_right.hdr  irradiance_diffuse_up.hdr  irradiance_specular_0.2_back.hdr  irradiance_specular_0.2_down.hdr  irradiance_specular_0.2_front.hdr  irradiance_specular_0.2_left.hdr  irradiance_specular_0.2_right.hdr  irradiance_specular_0.2_up.hdr  irradiance_specular_0.4_back.hdr  irradiance_specular_0.4_down.hdr  irradiance_specular_0.4_front.hdr  irradiance_specular_0.4_left.hdr  irradiance_specular_0.4_right.hdr  irradiance_specular_0.4_up.hdr  irradiance_specular_0.6_back.hdr  irradiance_specular_0.6_down.hdr  irradiance_specular_0.6_front.hdr  irradiance_specular_0.6_left.hdr  irradiance_specular_0.6_right.hdr  irradiance_specular_0.6_up.hdr  irradiance_specular_0.8_back.hdr  irradiance_specular_0.8_down.hdr  irradiance_specular_0.8_front.hdr  irradiance_specular_0.8_left.hdr  irradiance_specular_0.8_right.hdr  irradiance_specular_0.8_up.hdr  irradiance_specular_0_back.hdr  irradiance_specular_0_down.hdr  irradiance_specular_0_front.hdr  irradiance_specular_0_left.hdr  irradiance_specular_0_right.hdr  irradiance_specular_0_up.hdr  irradiance_specular_1_back.hdr  irradiance_specular_1_down.hdr  irradiance_specular_1_front.hdr  irradiance_specular_1_left.hdr  (+2 more)
assets/model/chair/: chair.gltf  chair.mtl
scripts/: build.bat  clear.bat  format.bat  full.bat  run.bat
shaders/: pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
src/: Vulkan.hpp
src/engine/: Camera.cpp  Camera.hpp  Constants.hpp  Cube.hpp  Dimensions.hpp  Loader.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Platform.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Transform.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  engine.cpp  engine.hpp
src/engine/renderer/: Helpers.hpp  Renderer.cpp  Renderer.hpp  SecretHelpers.hpp
src/engine/rendering/: renderer.cpp  renderer.hpp
src/scenes/: Basic.hpp  Chair.hpp  Helpers.hpp
